# sch-visualization

./: .clang-format-common.sh  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: CMakeLists.txt
include/sch/view/: S_Object_gl.h
src/: CMakeLists.txt  Polyhedron_algorithms_gl.cpp  Polyhedron_algorithms_gl.h  STPBV_gl.cpp  STPBV_gl.h  S_Box_gl.cpp  S_Box_gl.h  S_Object_Raw_gl.cpp  S_Object_Raw_gl.h  S_Object_gl.cpp  S_Point_gl.cpp  S_Point_gl.h  S_Sphere_gl.cpp  S_Sphere_gl.h  S_Supperellipsoid_gl.cpp  S_Supperellipsoid_gl.h
tests/: CMakeLists.txt  Test1.cpp  common.cpp  common.h  display-stpbvs.cpp  display.cpp  example_displayer.cpp  example_test.cpp
unitTestings/: CMakeLists.txt  common.cpp  common.h
